--- a/charts/blockscout-stack/Chart.yaml
+++ b/charts/blockscout-stack/Chart.yaml
@@ -1,9 +1,6 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: 0.6.3
 version: 0.6.3
 name: blockscout-stack
-description: '''
-Helm chart for deploying blockscout-stack in K8S
+description:
 
-Deploy command: `helm upgrade --install -n=<namespace> blockscout-stack ./ -f values-<name>.yaml`
-'''
